<resources>
    <string name="app_name">Mtandao</string>
    <string name="mundoro_clicic">MUNDORO CLICIC</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mundoro_clinic" />
    <string name="mundoro_medical">Mundoro medical</string>
    <string name="search">Search</string>
    <string name="add_post">add_post</string>
    <string name="logout">logout</string>
</resources>